--- a/admin dashboard/3settingspage/index.html
+++ b/admin dashboard/3settingspage/index.html
@@ -24,7 +24,7 @@
 
             <div class="ms-auto d-flex align-items-center">
                 <div class="text-end me-2">
-                    <span class="fw-bold">Hey, Karan</span>
+                    <span class="fw-bold">Karan Gehlot</span>
                     <span class="admin-text">Admin</span>
                 </div>
                 <img src="rk_school-removebg-preview.png" alt="Profile" class="profile-icon" id="profileIcon">
